# functions/src/shared/security/security.controller.ts
@@ -6,50 +6,52 @@ import { SecurityService } from './security.service';
 export class SecurityController {
   constructor(private readonly securityService: SecurityService) {}
 
-  @Post('sendPasswordResetEmail')
-  @HttpCode(200)
-  sendPasswordEmailReset(
-    @Req() req: Request,
-    @Body('email') email: string,
-  ): object {
-    const ipAddress: string = req.socket.remoteAddress;
-    const userEmail: string = (<any>req).user.email;
-    return this.securityService.sendPasswordEmailReset(
-      email,
-      ipAddress,
-      userEmail,
-    );
-  }
+  // @Post('sendPasswordResetEmail')
+  // @HttpCode(200)
+  // sendPasswordEmailReset(
+  //   @Req() req: Request,
+  //   @Body('email') email: string,
+  // ): object {
+  //   const ipAddress: string = req.socket.remoteAddress;
+  //   const userEmail: string = (<any>req).user.email;
+  //   return this.securityService.sendPasswordEmailReset(
+  //     email,
+  //     ipAddress,
+  //     userEmail,
+  //   );
+  // }
 
-  @Post('setPasswordInDB')
-  setPasswordInDB(
-    @Req() req: Request,
-    @Body('password') password: string,
-  ): object {
-    const uid: string = (<any>req).user.uid;
-    return this.securityService.setPasswordInDB(uid, password);
-  }
+  // @Post('setPasswordInDB')
+  // setPasswordInDB(
+  //   @Req() req: Request,
+  //   @Body('password') password: string,
+  // ): object {
+  //   const uid: string = (<any>req).user.uid;
+  //   return this.securityService.setPasswordInDB(uid, password);
+  // }
 
-  @Post('addChangingPasswordDate')
-  @HttpCode(201)
-  addChangingPasswordDate(@Req() req: Request): object {
-    const userID: string = (<any>req).user.uid;
-    return this.securityService.addChangingPasswordDate(userID);
-  }
+  // @Post('addChangingPasswordDate')
+  // @HttpCode(201)
+  // addChangingPasswordDate(@Req() req: Request): object {
+  //   const userID: string = (<any>req).user.uid;
+  //   return this.securityService.addChangingPasswordDate(userID);
+  // }
 
-  @Post('checkPreviousPasswords')
-  @HttpCode(200)
-  checkPreviousPasswords(
-    @Req() req: Request,
-    @Body('password') password: string,
-  ): object {
-    const uid: string = (<any>req).user.uid;
-    return this.securityService.checkPreviousPasswords(uid, password);
-  }
+  // @Post('checkPreviousPasswords')
+  // @HttpCode(200)
+  // checkPreviousPasswords(
+  //   @Req() req: Request,
+  //   @Body('password') password: string,
+  // ): object {
+  //   const uid: string = (<any>req).user.uid;
+  //   return this.securityService.checkPreviousPasswords(uid, password);
+  // }
 
   @Post('disableInactiveUsers')
   @HttpCode(200)
   disableInactiveUsers(@Body('NumDays') numDays: number): object {
     return this.securityService.disableInactiveUsers(numDays);
   }
+
+  
 }
